--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <!-- navigation style & js -->
     <link rel="stylesheet" href="/css/nav.css" />
     <script src="/js/nav.js" defer></script>
-    <!-- loading css styles and js  -->
+    <!-- loading c    ss styles and js  -->
     <link rel="stylesheet" href="css/loading.css">
     <script defer src="/js/loading.js" ></script>
     <!-- main body css -->
@@ -33,7 +33,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="htmlCourse.html">HTML</a>
+          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
            <a href="basicJs.html">JavaScript</a>
         </div>
@@ -384,12 +384,12 @@
     <footer>
       <div class="footer-container">
           <div class="footer-section company-info">
-              <img src="logo.png" alt="Company Logo">
+              <img src="/images/logo.png" alt="Company Logo">
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
               <div class="social-media">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+               <!-- twitter link was fixed after feedback from team -->
+                <a href=" https://x.com/home" target="_blank"><i class="fab fa-twitter"></i></a>                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
