--- a/basicJs.html
+++ b/basicJs.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Faba Fasti Traore" />
+    <meta name="title" content="Learn JavaScript and CSS with Video Tutorials">
+  <meta name="description" content="Explore a comprehensive collection of video tutorials covering JavaScript variables, DOM manipulation, CSS properties, and more. Perfect for beginners and advanced learners.">
+  <meta name="keywords" content="JavaScript, CSS, tutorial, video, programming, web development, DOM, variables, Flexbox, Grid">
+  <meta name="author" content="Faba Traore" />
+  <meta name="robots" content="index, follow">
+    <!-- favicon  -->
+    <link rel="icon"  href="/images/favicon.png" type="image/png">
      <!-- variables  styles  -->
     <link rel="stylesheet" href="css/styleVariables.css" />
     <!-- navigation style & js -->
@@ -22,7 +28,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="htmlCourse.html">HTML</a>
+          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
           <a href="basicJs.html">JavaScript</a>
         </div>
@@ -123,7 +129,7 @@
    <p> This <strong>code</strong> is a above <strong>simply  conditional statement</strong> in <strong>JavaScript</strong>. It checks whether the variable <strong>isHotDay</strong> is <strong>true</strong> or <strong>false</strong>. If <strong>isHotDay</strong> is <strong>true</strong>, meaning it's a <strong>hot day</strong>, the code logs the message "<strong>No Need to wear a jacket</strong>" to the console. If <strong>isHotDay</strong> is <strong>false</strong>, indicating it's <strong>not a hot day</strong>, the code logs the message "<strong>Need to wear a jacket</strong>" to the console. In essence, it helps <strong>determine</strong> whether or not you need to <strong>wear a jacket</strong> based on the <strong>weather condition</strong> represented by the <strong>isHotDay</strong> variable.</p>
     <a
           class="read-more"
-          href="https://en.wikipedia.org/wiki/Variable_(computer_science")
+          href="https://javascript.info/ifelse"
           target="_blank"
           >Read More</a
         >
@@ -174,11 +180,13 @@
   <footer>
       <div class="footer-container">
           <div class="footer-section company-info">
-              <img src="logo.png" alt="Company Logo">
+              <img src="/images/logo.png" alt="Company Logo">
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
               <div class="social-media">
+                
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                               <!-- twitter link was fixed after feedback from team -->
+<a href=" https://x.com/home" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
