--- a/cssCourse.html
+++ b/cssCourse.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Faba Fasti Traore" />
+   <meta name="title" content="Learn JavaScript and CSS with Video Tutorials">
+  <meta name="description" content="Explore a comprehensive collection of video tutorials covering JavaScript variables, DOM manipulation, CSS properties, and more. Perfect for beginners and advanced learners.">
+  <meta name="keywords" content="JavaScript, CSS, tutorial, video, programming, web development, DOM, variables, Flexbox, Grid">
+  <meta name="author" content="Faba Traore" />
+  <meta name="robots" content="index, follow">
+    <!-- favicon  -->
+    <link rel="icon"  href="/images/favicon.png" type="image/png">
     <!-- variables  styles  -->
     <link rel="stylesheet" href="css/styleVariables.css" />
     <!-- navigation style & js -->
@@ -24,7 +30,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="htmlCourse.html">HTML</a>
+          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
           <a href="basicJs.html">JavaScript</a>
         </div>
@@ -381,7 +387,7 @@
 </pre>
             <a
               class="read-more"
-              href="https://developer.mozilla.org/en-US/docs/Web/CSS/color"
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS/padding"
               target="_blank"
               >Read More</a
             >
@@ -437,7 +443,7 @@
     </pre>
             <a
               class="read-more"
-              href="https://developer.mozilla.org/en-US/docs/Web/CSS/color"
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS/margin"
               target="_blank"
               >Read More</a
             >
@@ -472,12 +478,13 @@
   <footer>
       <div class="footer-container">
           <div class="footer-section company-info">
-              <img src="logo.png" alt="Company Logo">
+              <img src="images/logo.png" alt="Company Logo">
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
               <div class="social-media">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                               <!-- twitter link was fixed after feedback from team -->
+<a href=" https://x.com/home" target="_blank"><i class="fab fa-twitter"></i></a> 
+ <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
@@ -485,7 +492,7 @@
               <h4>Solutions</h4>
               <ul>
                   <li><a href="https://developer.mozilla.org/en-US/docs/Web">Exercises</a></li>
-                  <li><a href="/about.html">Team</a></li>
+                  <li><a href="about.html">Team</a></li>
                   <li><a href="about.html">Contact</a></li>
                   <li><a href="about.html">Insights</a></li>
               </ul>
