--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" content="Learn JavaScript and CSS with Video Tutorials">
   <meta name="description" content="Explore a comprehensive collection of video tutorials covering JavaScript variables, DOM manipulation, CSS properties, and more. Perfect for beginners and advanced learners.">
@@ -35,7 +35,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="htmlCourse.html">HTML</a>
+          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
           <a href="basicJs.html">JavaScript</a>
         </div>
@@ -176,7 +176,8 @@
           </p>
           <!-- 
             This is a button with the text "Learn More".
-          --> <button title="Coming soon">JOIN US</button>
+             a link to our discord. It was improved after feedback from tester 
+          --> <button class="btn-dicord" title="Coming soon"> <a href="https://discord.com/channels/1185659133396013166/1243507377794449450"  target="_blank"> JOIN US</a></button>
         </div>
       </div>
 
@@ -218,7 +219,7 @@
                   <span>Images &amp; videos</span>
                 </li>
               </ul>
-              <button type="button" class="action"><a href="htmlCourse.html">Get Started</a></button>
+              <button type="button" class="action"><a href="htmlCourse.html" title="course is coming soon">Get Started</a></button>
             </div>
              <div class="card">
               <div class="header">
@@ -320,7 +321,7 @@
                   <span>Condition</span>
                 </li>
               </ul>
-              <button type="button" class="action"><a href="react.html">Get Started</a></button>
+              <button type="button" class="action"><a href="react.html" title="course is coming soon">Get Started </a></button>
             </div>
           </div>
         </div>
@@ -330,11 +331,12 @@
   <footer>
       <div class="footer-container">
           <div class="footer-section company-info">
-              <img src="logo.png" alt="Company Logo">
+              <img src="images/logo.png" alt="Company Logo">
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
               <div class="social-media">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                              <!-- twitter link was fixed after feedback from team -->
+                <a href=" https://x.com/home" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
