--- a/videos.html
+++ b/videos.html
@@ -34,7 +34,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="htmlCourse.html">HTML</a>
+          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
           <a href="basicJs.html">JavaScript</a>
         </div>
@@ -99,65 +99,46 @@
    <main>
      <div class="video-card">
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
+                <iframe src="https://www.youtube.com/embed/nbX0MIV7-Ek?si=vg3P4MMWtfsmkScP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <span>JavaScript Variables</span>
         <p>Learn how to declare and use variables in JavaScript.</p>
       </div>
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/YIawGqNxe0E?si=7YCNR9tiPqDv0xN4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <span>Document Object Model (DOM)</span>
         <p>Understand the DOM and how to manipulate HTML elements with JavaScript.</p>
       </div>
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/PFmuCDHHpwk?si=jxWCk7tqr_ELhvs3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <span>Object-Oriented Programming</span>
         <p>Dive into the concepts of OOP in JavaScript.</p>
       </div>
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/GHIgr1_v6Cw?si=Cb02Hz5OluyDlTXr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <span>CSS Background</span>
         <p>Explore various background properties in CSS.</p>
       </div>
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
-        <span>CSS Color</span>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LwbKb2J8iy8?si=05cxOVF8xV4jh6xJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        <span>CSS Color</span>
         <p>Learn about different ways to set colors in CSS.</p>
       </div>
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/rBWA_t-KnKk?si=3WsMWYmT0a7beR0-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <span>CSS Margin</span>
         <p>Understand how to use the margin property in CSS for layout.</p>
       </div>
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/NZEz4yNITd8?si=h6RICzHBRy6xUJzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <span>CSS Padding</span>
         <p>Learn how padding affects the spacing inside elements.</p>
       </div>
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/fYq5PXgSsbE?si=ktMmpqQ2zkwTzqo1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <span>CSS Flexbox</span>
         <p>Master the Flexbox layout model for designing responsive layouts.</p>
       </div>
       <div class="video">
-        <video autoplay muted loop>
-          <source src="/videos/codingSlide.mp4">
-        </video>
+      <iframe width="290px" height="315" src="https://www.youtube.com/embed/nbX0MIV7-Ek?si=vg3P4MMWtfsmkScP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <span>CSS Grid</span>
         <p>Get introduced to CSS Grid and create complex grid-based layouts.</p>
       </div>
@@ -168,11 +149,12 @@
   <footer>
       <div class="footer-container">
           <div class="footer-section company-info">
-              <img src="logo.png" alt="Company Logo">
+              <img src="images/logo.png" alt="Company Logo">
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
               <div class="social-media">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+               <!-- twitter link was fixed after feedback from team -->
+                <a href=" https://x.com/home" target="_blank"><i class="fab fa-twitter"></i></a>    
                 <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
