--- a/htmlCourse.html
+++ b/htmlCourse.html
@@ -30,7 +30,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="htmlCourse.html">HTML</a>
+          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
           <a href="basicJs.html">JavaScript</a>
         </div>
@@ -477,8 +477,9 @@
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
               <div class="social-media">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+               <!-- twitter link was fixed after feedback from team -->
+                <a href=" https://x.com/home" target="_blank"><i class="fab fa-twitter"></i></a>
+<a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
@@ -486,7 +487,7 @@
               <h4>Solutions</h4>
               <ul>
                   <li><a href="https://developer.mozilla.org/en-US/docs/Web">Exercises</a></li>
-                  <li><a href="/about.html">Team</a></li>
+                  <li><a href="about.html">Team</a></li>
                   <li><a href="about.html">Contact</a></li>
                   <li><a href="about.html">Insights</a></li>
               </ul>
