--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
+          <a href="htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
            <a href="basicJs.html">JavaScript</a>
         </div>
@@ -100,6 +100,7 @@
           <p>Empowering You Through Code: Our Mission and Vision</p>
         </section>
       </article>
+      <!-- our vision section -->
       <section  class="ourVision">
         <div>
           <h2>our Vision</h2>
@@ -112,6 +113,7 @@
         </div>
       </section>
       <section class="mission">
+        <!-- mission section -->
         <div class="mission-heading">
           <h2>our mission</h2>
         </div>
@@ -128,7 +130,7 @@
           </p>
         </div>
       </section>
-
+<!-- our value section -->
       <section id="hidden" class="ourValue">
         <div>
           <h2>our value</h2>
@@ -386,6 +388,7 @@
           <div class="footer-section company-info">
               <img src="/images/logo.png" alt="Company Logo">
               <p>Est error fugo modi error. Laborum cum nobis porro cupiditate et quo.</p>
+              <!-- social media section -->
               <div class="social-media">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                <!-- twitter link was fixed after feedback from team -->
@@ -393,15 +396,17 @@
                 <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
+          <!-- solutions section -->
           <div class="footer-section solutions">
               <h4>Solutions</h4>
               <ul>
                   <li><a href="https://developer.mozilla.org/en-US/docs/Web">Exercises</a></li>
-                  <li><a href="/about.html">Team</a></li>
+                  <li><a href="about.html">Team</a></li>
                   <li><a href="about.html">Contact</a></li>
                   <li><a href="about.html">Insights</a></li>
               </ul>
           </div>
+          <!-- support section -->
           <div class="footer-section support">
               <h4>Support</h4>
               <ul>
@@ -412,6 +417,7 @@
               </ul>
           </div>
           <div class="footer-section company">
+            <!-- about company section -->
               <h4>Company</h4>
               <ul>
                   <li><a href="about.html">About</a></li>
