--- a/dom.html
+++ b/dom.html
@@ -28,7 +28,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
+          <a href="htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
           <a href="basicJs.html">JavaScript</a>
         </div>
