--- a/videos.html
+++ b/videos.html
@@ -34,7 +34,7 @@
           <i class="fab ba-caret-down"></i>
         </button>
         <div class="drop-content">
-          <a href="#htmlCourse.html" title="course coming soon">HTML</a>
+          <a href="htmlCourse.html" title="course coming soon">HTML</a>
           <a href="cssCourse.html">CSS</a>
           <a href="basicJs.html">JavaScript</a>
         </div>
@@ -154,8 +154,7 @@
               <div class="social-media">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                <!-- twitter link was fixed after feedback from team -->
-                <a href=" https://x.com/home" target="_blank"><i class="fab fa-twitter"></i></a>    
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href=" https://x.com/home" target="_blank"><i class="fab fa-twitter"></i></a>                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
