--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <!-- main body css -->
     <link rel="stylesheet" href="/css/about.css" />
     <script src="/js/about.js"></script>
-    <title>About page</title>
+    <title>About</title>
   </head>
   <body>
     <!-- navigation bar -->
@@ -48,6 +48,7 @@
         >&#9776;</a
       >
     </div>
+
     <!-- toggle -->
     <div id="hidden" class="toggle">
       <div class="btn-container">
@@ -352,13 +353,13 @@
           <p class="title">contact us</p>
           <p>
             <span id="message"> <i class="fas fa-envelope"></i></span
-            >info@getintouch.uk
+            >info@example.co.uk
           </p>
           <p>
             <span id="phone"><i class="fas fa-clock"></i></span>01234-234-543
           </p>
           <p>
-            <span id="home"><i class="fas fa-building"></i></span>23 Nowhere st.
+            <span id="home"><i class="fas fa-building"></i></span>Any Time.
           </p>
           <p>
             <span id="time"><i class="fas fa-phone-alt"></i></span>23 Nowhere
