--- a/basicJs.html
+++ b/basicJs.html
@@ -17,7 +17,7 @@
     <script src="/js/nav.js" defer></script>
     <!-- css course style and js-->
 <link rel="stylesheet" href="css/codeStyles.css">
-    <title>Basic JavaScript</title>
+    <title>JavaScript Course</title>
   </head>
   <body>
     <!-- navigation bar -->
