--- a/cssCourse.html
+++ b/cssCourse.html
@@ -18,7 +18,7 @@
     <script src="/js/home.js"></script>
     <!-- css course style and js-->
     <link rel="stylesheet" href="css/codeStyles.css" />
-    <title>css page</title>
+    <title>CSS Course</title>
   </head>
   <body>
     <!-- navigation bar -->
