--- a/dom.html
+++ b/dom.html
@@ -17,7 +17,7 @@
     <script src="/js/nav.js" defer></script>
     <!-- code  styls -->
 <link rel="stylesheet" href="css/codeStyles.css">
-    <title>DOCUMENT OBJECT MODEL page</title>
+    <title>DOCUMENT OBJECT MODEL Course</title>
   </head>
   <body>
     <!-- navigation bar -->
