--- a/htmlCourse.html
+++ b/htmlCourse.html
@@ -19,7 +19,7 @@
       <link rel="stylesheet" href="css/codeStyles.css">
       <!-- html course style -->
       <link rel="stylesheet" href="css/htmlCourse.css">
-    <title>html page</title>
+    <title>HTML Course</title>
     <style></style>
   </head>
   <body>
