--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/loading.css">
     <script defer src="/js/loading.js" ></script>
 
-    <title>Home page</title>
+    <title>Home</title>
   </head>
   <body>
     <!-- navigation bar -->
@@ -190,7 +190,7 @@
             <div class="card">
               <div class="header">
                 <span class="title">HTML</span>
-                <span class="price">Free</span>
+                <span class="price">£299.99</span>
               </div>
               <p class="desc">Etiam ac convallis enim, eget euismod dolor.</p>
               <ul class="lists">
@@ -224,7 +224,7 @@
              <div class="card">
               <div class="header">
                 <span class="title">CSS</span>
-                <span class="price">Free</span>
+                <span class="price">£499</span>
               </div>
               <p class="desc">Etiam ac convallis enim, eget euismod dolor.</p>
               <ul class="lists">
@@ -258,7 +258,7 @@
              <div class="card">
               <div class="header">
                 <span class="title">javascript</span>
-                <span class="price">Free</span>
+                <span class="price">£599</span>
               </div>
               <p class="desc">Etiam ac convallis enim, eget euismod dolor.</p>
               <ul class="lists">
@@ -292,7 +292,7 @@
              <div class="card">
               <div class="header">
                 <span class="title">REACT</span>
-                <span class="price">Free</span>
+                <span class="price">£399</span>
               </div>
               <p class="desc">Etiam ac convallis enim, eget euismod dolor.</p>
               <ul class="lists">
