--- a/videos.html
+++ b/videos.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/loading.css">
     <script defer src="/js/loading.js" ></script>
 
-    <title>video page</title>
+    <title>Tutorial videos</title>
   </head>
   <body>
     <!-- navigation bar -->
